force-app/main/default/objects/BRM_IT_Request__c/BRM_IT_Request__c.object-meta.xml
<CustomObject>
    <label>BRM IT Request</label>
    <nameField>
        <displayFormat>BRM-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRM IT Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>