force-app/main/default/objects/BRM_IT_Request__c/fields/Annual_Baseline_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Annual_Baseline_Time_Hours__c</fullName>
    <inlineHelpText>Hours spent on task currently per year</inlineHelpText>
    <label>Annual Baseline Time (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>