force-app/main/default/objects/BRM_IT_Request__c/fields/Annual_Business_Savings__c.field-meta.xml
<CustomField>
    <fullName>Annual_Business_Savings__c</fullName>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Anticipated business savings per year</inlineHelpText>
    <label>Annual Business Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>