force-app/main/default/objects/BRM_IT_Request__c/fields/Annual_Revenue_Gain__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Gain__c</fullName>
    <inlineHelpText>Anticipated revenue gain per year</inlineHelpText>
    <label>Annual Revenue Gain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>