force-app/main/default/objects/BRM_IT_Request__c/fields/Annual_Revenue_Loss_Avoidance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Loss_Avoidance__c</fullName>
    <inlineHelpText>Anticipated revenue loss avoidance per year</inlineHelpText>
    <label>Annual Revenue Loss Avoidance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>