force-app/main/default/objects/BRM_IT_Request__c/fields/Annual_Time_Savings_Hours__c.field-meta.xml
<CustomField>
    <fullName>Annual_Time_Savings_Hours__c</fullName>
    <inlineHelpText>Anticipated hours per year to be saved (internally or externally)</inlineHelpText>
    <label>Annual Time Savings (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>