force-app/main/default/objects/BRM_IT_Request__c/fields/Application_s__c.field-meta.xml
<CustomField>
    <fullName>Application_s__c</fullName>
    <label>Application(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>