force-app/main/default/objects/BRM_IT_Request__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liko</fullName>
            </value>
            <value>
                <fullName>Welch Allyn</fullName>
            </value>
            <value>
                <fullName>Hill-Rom</fullName>
            </value>
            <value>
                <fullName>Mortara</fullName>
            </value>
            <value>
                <fullName>Allen Medical</fullName>
            </value>
            <value>
                <fullName>Aspen Surgical</fullName>
            </value>
            <value>
                <fullName>Trumpf</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>