force-app/main/default/objects/BRM_IT_Request__c/fields/BRM_IT_Form_Created__c.field-meta.xml
<CustomField>
    <fullName>BRM_IT_Form_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRM IT Form Created</label>
    <type>Checkbox</type>
</CustomField>