force-app/main/default/objects/BRM_IT_Request__c/fields/Budget_Available_Outside_of_IT__c.field-meta.xml
<CustomField>
    <fullName>Budget_Available_Outside_of_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Available Outside of IT</label>
    <type>Checkbox</type>
</CustomField>