force-app/main/default/objects/BRM_IT_Request__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <inlineHelpText>Describe the value to Hill-Rom of this request. Identify the value (KPI’s) that should be achieved, including current measurement of those KPI’s. Identify suggested alternatives for implementation.</inlineHelpText>
    <label>Business Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>