force-app/main/default/objects/BRM_IT_Request__c/fields/Business_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Business_Rationale__c</fullName>
    <label>Business Rationale</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Improvement/Efficiency without Cost Savings</fullName>
            </value>
            <value>
                <fullName>Process Improvement/Efficiency with Cost Savings</fullName>
            </value>
            <value>
                <fullName>External Customer Impact without Dollar Impact</fullName>
            </value>
            <value>
                <fullName>External Customer Impact with Dollar Impact</fullName>
            </value>
            <value>
                <fullName>New Product Development/Revenue Increase</fullName>
            </value>
            <value>
                <fullName>Margin Improvement</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Regulatory</fullName>
            </value>
            <value>
                <fullName>Technical/Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>