force-app/main/default/objects/BRM_IT_Request__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Support Systems</fullName>
            </value>
            <value>
                <fullName>Front Line Care</fullName>
            </value>
            <value>
                <fullName>Global Surgical Solutions</fullName>
            </value>
            <value>
                <fullName>Corporate Function or working across two or more GBUs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>