force-app/main/default/objects/BRM_IT_Request__c/fields/Change_Owner__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business person responsible for providing benefits and scope clarity</inlineHelpText>
    <label>Business Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_IT_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>