force-app/main/default/objects/BRM_IT_Request__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <formula>IF(ISPICKVAL(Submit_to_BRM__c  , &apos;Yes&apos;),TODAY() , null)</formula>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>