force-app/main/default/objects/BRM_IT_Request__c/fields/Driver_Goals__c.field-meta.xml
<CustomField>
    <fullName>Driver_Goals__c</fullName>
    <label>Driver Goals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Develop market for connected care</fullName>
            </value>
            <value>
                <fullName>Execute growth-oriented NPD</fullName>
            </value>
            <value>
                <fullName>Deliver on financial objectives</fullName>
            </value>
            <value>
                <fullName>Increase operational efficiency</fullName>
            </value>
            <value>
                <fullName>Accelerate China growth</fullName>
            </value>
            <value>
                <fullName>Accelerate international growth</fullName>
            </value>
            <value>
                <fullName>Accelerate growth with acquisitions</fullName>
            </value>
            <value>
                <fullName>Transform for growth</fullName>
            </value>
            <value>
                <fullName>Embrace quality matters</fullName>
            </value>
            <value>
                <fullName>Focus on talent</fullName>
            </value>
            <value>
                <fullName>Mature compliance program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>