force-app/main/default/objects/BRM_IT_Request__c/fields/Estimated_Annual_Benefit_Value1__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Benefit_Value1__c</fullName>
    <label>Estimated Annual Benefit/Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>