force-app/main/default/objects/BRM_IT_Request__c/fields/Estimated_Annual_Benefit_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Benefit_Value__c</fullName>
    <inlineHelpText>USD Values</inlineHelpText>
    <label>Estimated Annual Benefit/Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $4,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $199,999</fullName>
            </value>
            <value>
                <fullName>$200,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>