force-app/main/default/objects/BRM_IT_Request__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Business sponsor at ELT or ELT-1 level</inlineHelpText>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_IT_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>