force-app/main/default/objects/BRM_IT_Request__c/fields/Financial_Efficiency_Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Efficiency_Benefit_Type__c</fullName>
    <label>Financial/Efficiency Benefit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Improvement / Efficiency</fullName>
            </value>
            <value>
                <fullName>Margin Improvement / Cost Decrease</fullName>
            </value>
            <value>
                <fullName>Revenue Increase/New Prod Dev Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>