force-app/main/default/objects/BRM_IT_Request__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Global Supply Chain Operations</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Quality Assurance / Regulatory Affairs (QA/RA)</fullName>
                <isActive>false</isActive>
                <label>Quality Assurance / Regulatory Affairs (QA/RA)</label>
            </value>
            <value>
                <fullName>Quality Assurance(QA)</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs(RA)</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development (R&amp;D)</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>