force-app/main/default/objects/BRM_IT_Request__c/fields/Functional_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Functional_Strategy__c</fullName>
    <inlineHelpText>Provide alignment to the Operations functional strategy</inlineHelpText>
    <label>Functional Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>