force-app/main/default/objects/BRM_IT_Request__c/fields/Risk_Impact__c.field-meta.xml
<CustomField>
    <fullName>Risk_Impact__c</fullName>
    <label>Risk Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Low likelihood of future impact</fullName>
            </value>
            <value>
                <fullName>1-Possible future impact</fullName>
            </value>
            <value>
                <fullName>2-Likely future impact</fullName>
            </value>
            <value>
                <fullName>3-Certain Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>