force-app/main/default/objects/BRM_IT_Request__c/fields/Submit_to_BRM__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_BRM__c</fullName>
    <description>Modified as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Select &apos;Yes&apos; if you want to submit this request to the BRM after saving.
Select &apos;No&apos; if you want to save this request without submitting it to the BRM yet.</inlineHelpText>
    <label>Submit to BP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>