force-app/main/default/objects/BRM_IT_Request__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>Short name for the request</inlineHelpText>
    <label>Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>