force-app/main/default/objects/BRM_IT_Request__c/validationRules/Annual_Baseline_Time_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Baseline_Time_is_Required</fullName>
    <active>true</active>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <errorConditionFormula>ISBLANK(Annual_Baseline_Time_Hours__c)  &amp;&amp;  ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>Annual_Baseline_Time_Hours__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>