force-app/main/default/objects/BRM_IT_Request__c/validationRules/Annual_Business_Savings_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Business_Savings_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Annual_Business_Savings__c)  &amp;&amp;  ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>Annual_Time_Savings_Hours__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>