force-app/main/default/objects/BRM_IT_Request__c/validationRules/Business_Lead_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Lead_is_Required</fullName>
    <active>true</active>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <errorConditionFormula>ISBLANK(Change_Owner__c)  &amp;&amp;  ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>Change_Owner__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>