force-app/main/default/objects/BRM_IT_Request__c/validationRules/Business_Risk_Likelihood_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Risk_Likelihood_is_Required</fullName>
    <active>true</active>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <errorConditionFormula>ISPICKVAL(Business_Risk_Likelihood__c, &apos;&apos;) &amp;&amp; ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;) &amp;&amp;  NOT(ISPICKVAL(Business_Risk_Severity__c,&apos;No impact&apos;))</errorConditionFormula>
    <errorDisplayField>Business_Risk_Likelihood__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>