force-app/main/default/objects/BRM_IT_Request__c/validationRules/Cannot_edit_after_submitting.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_after_submitting</fullName>
    <active>true</active>
    <description>Cannot edit requests that have been submitted to the BRM</description>
    <errorConditionFormula>PRIORVALUE(BRM_IT_Form_Created__c ) = True</errorConditionFormula>
    <errorMessage>You cannot edit this request because it has already been submitted to the BRM</errorMessage>
</ValidationRule>