force-app/main/default/objects/BRM_IT_Request__c/validationRules/Driver_Goals_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Driver_Goals_is_Required</fullName>
    <active>true</active>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <errorConditionFormula>ISPICKVAL(Driver_Goals__c, &apos;&apos;) &amp;&amp; ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>Driver_Goals__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>