force-app/main/default/objects/BRM_IT_Request__c/validationRules/ELT_Area_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ELT_Area_is_Required</fullName>
    <active>true</active>
    <description>Created as part of CR00032940 | IT-REQ-1779</description>
    <errorConditionFormula>ISPICKVAL(ELT_Area__c, &apos;&apos;)  &amp;&amp;  ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>ELT_Area__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>