force-app/main/default/objects/BRM_IT_Request__c/validationRules/ELT_Sub_Area_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ELT_Sub_Area_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Function__c, &apos;&apos;)  &amp;&amp;  ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>Function__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>