force-app/main/default/objects/BRM_IT_Request__c/validationRules/Executive_Sponsor_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Executive_Sponsor_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Executive_Sponsor__c)  &amp;&amp;  ISPICKVAL(Submit_to_BRM__c, &apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>Executive_Sponsor__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>